// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`items reducer addItem should add an item by string 1`] = `
Object {
  "allIds": Array [
    "107a8b69eed98af82d87dabc319af32faad6326f",
  ],
  "byId": Object {
    "107a8b69eed98af82d87dabc319af32faad6326f": Object {
      "checked": false,
      "id": "107a8b69eed98af82d87dabc319af32faad6326f",
      "name": "Leche",
    },
  },
}
`;

exports[`items reducer addItem should add an item to the list 1`] = `
Object {
  "allIds": Array [
    "107a8b69eed98af82d87dabc319af32faad6326f",
  ],
  "byId": Object {
    "107a8b69eed98af82d87dabc319af32faad6326f": Object {
      "checked": false,
      "id": "107a8b69eed98af82d87dabc319af32faad6326f",
      "name": "Leche",
    },
  },
}
`;

exports[`items reducer addItem should respect the id if given 1`] = `
Object {
  "allIds": Array [
    "leche",
  ],
  "byId": Object {
    "leche": Object {
      "checked": false,
      "id": "leche",
      "name": "Leche",
    },
  },
}
`;

exports[`items reducer can be used with reduce 1`] = `
Object {
  "allIds": Array [
    "milk",
    "107a8b69eed98af82d87dabc319af32faad6326f",
  ],
  "byId": Object {
    "107a8b69eed98af82d87dabc319af32faad6326f": Object {
      "checked": false,
      "id": "107a8b69eed98af82d87dabc319af32faad6326f",
      "name": "Leche",
    },
    "milk": Object {
      "categoryId": "dairy",
      "checked": true,
      "id": "milk",
      "name": "Cow Milk",
    },
  },
}
`;

exports[`items reducer categorizeItem should set the categoryId of the selected item from the list 1`] = `
Object {
  "allIds": Array [
    "leche",
  ],
  "byId": Object {
    "leche": Object {
      "categoryId": "asdasdfadf",
      "name": "Leche",
    },
  },
}
`;

exports[`items reducer nameItem should set the name of the selected item from the list 1`] = `
Object {
  "allIds": Array [
    "milk",
    "leche",
  ],
  "byId": Object {
    "leche": Object {
      "name": "Leche",
    },
    "milk": Object {
      "name": "Cow Milk",
    },
  },
}
`;

exports[`items reducer removeItem should remove an item from the list 1`] = `
Object {
  "allIds": Array [
    "leche",
  ],
  "byId": Object {
    "leche": Object {
      "name": "Leche",
    },
  },
}
`;

exports[`items reducer toggleItem should check the selected item from the list 1`] = `
Object {
  "allIds": Array [
    "milk",
    "leche",
  ],
  "byId": Object {
    "leche": Object {
      "checked": false,
      "name": "Leche",
    },
    "milk": Object {
      "checked": true,
      "name": "Milk",
    },
  },
}
`;

exports[`items reducer toggleItem should uncheck the selected item from the list 1`] = `
Object {
  "allIds": Array [
    "milk",
    "leche",
  ],
  "byId": Object {
    "leche": Object {
      "checked": false,
      "name": "Leche",
    },
    "milk": Object {
      "checked": false,
      "name": "Milk",
    },
  },
}
`;
